Refactor String formatting in Person